; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_assign_random_seed.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_assign_random_seed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@setseed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assign_random_seed(double %0, i8* %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca i8*, align 8
  store double %0, double* %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = bitcast i8* %5 to i32*
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i32, i32* @setseed, align 4
  %11 = load double, double* %3, align 8
  %12 = call i32 @Float8GetDatum(double %11)
  %13 = call i32 @DirectFunctionCall1(i32 %10, i32 %12)
  br label %14

14:                                               ; preds = %9, %2
  %15 = load i8*, i8** %4, align 8
  %16 = bitcast i8* %15 to i32*
  store i32 0, i32* %16, align 4
  ret void
}

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1

declare dso_local i32 @Float8GetDatum(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
